--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
             <p class="content__teaser">{{ out }}</p>
             <p class="content__teaser">{{ ip }}</p>
             <p class="content__teaser">{{ city }}</p>
+            <p class="content__teaser">{{ weather }}</p>
         </div><!-- /content -->
 
         <video id="my-video" class="video" muted loop>
