added git installtion for EB -2

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
             <h1 class="content__heading">Welcome To The WeathrZen Demo</h1>
             <p class="content__teaser">{{ ip }}</p>
             <p class="content__teaser">{{ city }}</p>
-            <p class="content__teaser">{{ weather }}</p>
+            <p class="content__teaser">{{ weather }}: {{ temp }}&deg;</p>
         </div><!-- /content -->
 
         <video id="my-video" class="video" muted loop>
