Rearranged file structure

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
             </ul>
         </nav>
         <div class="content">
-            <img src="/static/logo.png" class="logo">
+            <img src="/static/img/T1d2120.png" class="logo">
             <h1 class="content__heading">Welcome To The WeatherZen Demo</h1>
         </div><!-- /content -->
 
