Working push for EB

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,12 +26,12 @@
             </ul>
         </nav>
         <div class="content">
-            <img src="/static/img/T1d2120.png" class="logo">
+            <img src="https://s3.amazonaws.com/elasticbeanstalk-us-east-1-830211144972/Images/logo_black_trans.png" class="logo">
             <h1 class="content__heading">Welcome To The WeatherZen Demo</h1>
         </div><!-- /content -->
 
         {% if default %}
-        <img src="/static/default.webp" class="bg">
+        <img src="https://s3.amazonaws.com/elasticbeanstalk-us-east-1-830211144972/Images/default.webp" class="bg">
         {% else %}
         <video id="my-video" class="video" muted loop>
             <source src="{{ video }}" type="video/webm">
