--- a/static/css/main.css
+++ b/static/css/main.css
@@ -77,6 +77,11 @@ body {
     text-decoration: none;
     color: #f0eceb;
     font-size: 25px;
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    transition: all 1s ease;
 }
 .zip_form:hover{
     color: #ccc;
