--- a/templates/index.html
+++ b/templates/index.html
@@ -19,9 +19,9 @@
                 <li><a>{{ weather }}</a></li>
                 <li><a>{{ temp }}&deg;F</a></li>
                 <li>
-                    <form class="zip_form" name="city_search">
-                        Search City:
-                        {{ form.city(size=10) }}
+                    <form class="zip_form" name="zip_search">
+                        Search Zip:
+                        {{ form.zip(size=10) }}
                     </form>
                 </li>
             </ul>
