--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,9 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="/static/css/main.css">
         <link href="https://fonts.googleapis.com/css?family=Lato:100" rel="stylesheet">
+
+
+        <script src="../static/scripts/gauge.min.js"></script>
     </head>
     <body>
 
@@ -31,6 +34,11 @@
         <div class="content">
             <img src="https://s3.amazonaws.com/elasticbeanstalk-us-east-1-830211144972/Images/logo_black_trans.png" class="logo">
             <h1 class="content__heading">Welcome To The WeatherZen Demo</h1>
+
+            <canvas id="temperature"></canvas>
+            <canvas id="humidity"></canvas>
+            <canvas id="pressure"></canvas>
+
         </div><!-- /content -->
 
         {% if default %}
