--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
             <img src="https://s3.amazonaws.com/elasticbeanstalk-us-east-1-830211144972/Images/logo_black_trans.png" class="logo">
             <h1 class="content__heading">Welcome To The WeatherZen Demo</h1>
 
-                <div id="gauge-container" style="background-color: white;">
+                <div id="gauge-container" style="background-color: black;">
                     <div id="temp-container" class="gauge-cont" style="float: left">
                         <canvas id="temperature"></canvas>
                         <h1 style="text-align: center">{{ temp }}&deg;{{ unit }}</h1>
