--- a/templates/index.html
+++ b/templates/index.html
@@ -61,19 +61,19 @@
 
 
                     var opts = {
-                        lines: 12, // The number of lines to draw
+                        lines: 20, // The number of lines to draw
                         angle: 0, // The length of each line
-                        lineWidth: 0.04, // The line thickness
+                        lineWidth: 0.03, // The line thickness
                         pointer: {
                             length: 1, // The radius of the inner circle
                             strokeWidth: 0.03, // The rotation offset
-                            color: '#000000' // Fill color
+                            color: '#f0eceb;' // Fill color
                         },
                         limitMax: 'false',   // If true, the pointer will not go past the end of the gauge
                         fontSize: 100,
                         colorStart: '#1d2120',   // Colors
                         colorStop: '#1d2120',    // just experiment with them
-                        strokeColor: '#E0E0E0',   // to see which ones work best for you
+                        strokeColor: '#f0eceb;',   // to see which ones work best for you
                         generateGradient: true
                     };
 
