--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,7 +5,7 @@ html {
     color: #222;
     font-size: 1em;
     line-height: 1.4;
-    background-color: lightgray;
+    background-color: #1d2120;
 }
 
 /*
@@ -53,6 +53,7 @@ video {
 html,
 body {
     height: 100%;
+    width: 100%;
 }
 
 body {
@@ -65,6 +66,7 @@ body {
 /* =============================================================================
   CONTENT
 ============================================================================= */
+
 .landing_form {
     width: 280px;
     margin-top: 50px;
@@ -185,6 +187,7 @@ li a.active {
     z-index: 2;
     margin: 0 auto;
     max-width: 720px;
+    width: 100%;
     height: 100%;
     min-height: 500px;
     max-height: 720px;
@@ -205,8 +208,9 @@ li a.active {
     font-size: 22px;
 }
 #gauge-container {
-    position:absolute;
-    bottom:0;
+    margin: 0 auto;
+    position: fixed;
+    bottom:10px;
     right:0;
 }
 
@@ -222,26 +226,6 @@ li a.active {
     min-height: 100px;
     width: 100%;
     height: auto;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-}
-.fullscreen-bg {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    overflow: hidden;
-    z-index: -100;
-}
-
-.fullscreen-bg__video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
