--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,6 +6,7 @@ html {
     font-size: 1em;
     line-height: 1.4;
     background-color: #1d2120;
+
 }
 
 /*
@@ -54,6 +55,7 @@ html,
 body {
     height: 100%;
     width: 100%;
+
 }
 
 body {
@@ -61,6 +63,8 @@ body {
     font-family: "Lato", sans-serif;
     line-height: 1.5;
     overflow: hidden;
+    box-shadow: inset 0px 0px 100px 50px rgba(0,0,0,0.6);
+
 }
 
 /* =============================================================================
@@ -192,7 +196,6 @@ li a.active {
     min-height: 500px;
     max-height: 720px;
     text-align: center;
-
 }
 
 .content__heading {
@@ -208,12 +211,27 @@ li a.active {
     font-size: 22px;
 }
 #gauge-container {
+
     margin: 0 auto;
     position: fixed;
     bottom:10px;
     right:0;
-}
 
+
+}
+.radial-shadow {
+   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0.42+0,0+69 */
+background: -moz-radial-gradient(center, ellipse cover,  rgba(0,0,0,0.42) 0%, rgba(0,0,0,0) 69%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
+background: -webkit-radial-gradient(center, ellipse cover,  rgba(0,0,0,0.42) 0%,rgba(0,0,0,0) 69%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
+background: radial-gradient(ellipse at center,  rgba(0,0,0,0.42) 0%,rgba(0,0,0,0) 69%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6b000000', endColorstr='#00000000',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+
+}
+.main-container {
+    width: 100%;
+    height: 100%;
+    background: black;
+}
 /* =============================================================================
   VIDEO
 ============================================================================= */
