--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
         <div class="main-container">
             <nav class="navbar" >
             <ul>
+                <li></li>
                 <li><a>{{ city }}</a></li>
                 <li><a>{{ weather }}</a></li>
                 <li>
@@ -34,25 +35,24 @@
         </nav>
         <div class="content">
             <img src="https://s3.amazonaws.com/elasticbeanstalk-us-east-1-830211144972/Images/logo_black_trans.png" class="logo">
-            <h1 class="content__heading">Welcome To The WeatherZen Demo</h1>
 
                 <div id="gauge-container">
                     <div id="temp-container" class="radial-shadow" style="float: left;">
                         <canvas id="temperature"></canvas>
                         <h1 style="text-align: center; color: #f0eceb" id="temp-text" class="radial-shadow">{{ temp }}&deg;{{ unit }}</h1>
-                        <p style="text-align: center; color: #f0eceb" class="radial-shadow">Temp</p>
+                        <p style="text-align: center; color: #f0eceb; font-size: 150%;" class="radial-shadow">Temp</p>
                     </div>
 
                     <div id="humidity-container" class="radial-shadow" style="float: left">
                         <canvas id="humidity"></canvas>
                         <h1 style="text-align: center; color: #f0eceb;" class="radial-shadow">{{ humidity }}%</h1>
-                        <p style="text-align: center; color: #f0eceb;" class="radial-shadow">Humidity</p>
+                        <p style="text-align: center; color: #f0eceb; font-size: 150%" class="radial-shadow">Humidity</p>
                     </div>
 
                     <div id="pressure-container" class="radial-shadow" style="float: left">
                         <canvas id="pressure"></canvas>
                         <h1 style="text-align: center; color: #f0eceb" class="radial-shadow">{{ pressure }} mB</h1>
-                        <p style="text-align: center; color: #f0eceb" class="radial-shadow">Pressure</p>
+                        <p style="text-align: center; color: #f0eceb; font-size: 150%;" class="radial-shadow">Pressure</p>
                     </div>
 
                 </div>
