--- a/static/css/main.css
+++ b/static/css/main.css
@@ -66,7 +66,6 @@ body {
     box-shadow: inset 0px 0px 100px 50px rgba(0,0,0,0.6);
 
 }
-
 /* =============================================================================
   CONTENT
 ============================================================================= */
@@ -119,7 +118,7 @@ body {
 .navbar {
     position: relative;
     z-index: 2;
-    max-width: 1020px;
+    min-width: 1200px;
     text-align: left;
 
 }
@@ -185,6 +184,7 @@ li a.active {
     width:25%; /* you can use % */
     height: auto;
 }
+
 .content {
     position: relative;
     top: 10%;
@@ -196,6 +196,15 @@ li a.active {
     min-height: 500px;
     max-height: 720px;
     text-align: center;
+}
+#bar-logo {
+    width: 10%;
+    height: auto;
+}
+#logo {
+    position: fixed;
+    top: 0;
+    right: 0;
 }
 
 .content__heading {
