--- a/static/css/main.css
+++ b/static/css/main.css
@@ -228,8 +228,19 @@ li a.active {
     position: fixed;
     bottom:10px;
     right:0;
+}
+.date, .time {
+    font-weight: 300;
+    font-size: 1.5em;
+}
 
+.date {
+    position: relative;
+    right: 0;
+}
 
+.time {
+    font-size: 4em;
 }
 .radial-shadow {
    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0.42+0,0+69 */
