--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,10 @@
         <div class="content">
             <img src="https://s3.amazonaws.com/elasticbeanstalk-us-east-1-830211144972/Images/logo_black_trans.png" class="logo">
 
+                <p id="date" class="date"></p>
+                <p id="time" class="time"></p>
+                <script src="/static/js/date.js"></script>
+
                 <div id="gauge-container">
                     <div id="temp-container" class="radial-shadow" style="float: left;">
                         <canvas id="temperature"></canvas>
